# grindoreiro2

./: .gitignore  HTML_REPORT_README.md  LICENSE  README.md  batch_analyze.py  batch_analyze_all.py  batch_false_negative_analyzer.py  batch_html_report.py  demo_analysis.py  demo_sample.bin.strings  grindoreiro.py  html_report_generator.py  pyproject.toml  report_template.html  session_manager.py  setup.py
docs/: README.md
docs/api-reference/: analyzer.md  cli.md  core.md  extractor.md  iso_handler.md  pipeline.md  pipeline_steps.md  processor.md
docs/developer-guides/: architecture.md  contributing.md  extending-pipeline.md  testing.md
docs/user-guides/: basic-usage.md  batch-processing.md  configuration.md  getting-started.md  html-reports.md  troubleshooting.md
grindoreiro/: __init__.py  __main__.py  analyzer.py  cli.py  core.py  extractor.py  iso_handler.py  pipeline.py  pipeline_steps.py  processor.py
grindoreiro/scripts/: isoabduct.py  stringripper.py
tests/: test_basic.py
